--- a/DostavkaNaMarket/Pages/Conditions.razor
+++ b/DostavkaNaMarket/Pages/Conditions.razor
@@ -2,7 +2,13 @@
 
 <PageTitle>Условия</PageTitle>
 
-
+<div class="col-6">
+                <label for="phoneNumber" class="form-label">Номер телефона</label>
+                <div class="input-group has-validation">
+                    <span class="input-group-text">+7</span>
+                    <input class="form-control" name="phone" placeholder="9011418686"/>
+                </div>
+            </div>
 
 @code {
 
